k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: riverrun
  labels:
    name: riverrun
